Added sub-heading, cleaned up code.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Giphy - Search/Display</title>
-	<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -13,7 +12,8 @@
 <body>
 	<div class="row justify-content-center">
 		<div class="header mt-3 col-12">
-			<h1 class="">Giphy Search & Display</h1>
+			<h1>Giphy Search & Display</h1>
+			<h5>The theme is 'animals'</h5>
 		</div>
 	</div>
 	<div class="container-fluid bg">
@@ -26,7 +26,7 @@
 			<div class="col-4">
 				<form class="float-right mb-3">
 					<div class="form-group mt-3">
-						<label for="searchTerm">Add an animal</label>
+						<label for="searchTerm">Add an animal button</label>
 						<input type="input" class="form-control" id="searchTerm" placeholder="Enter an animal name">
 					</div>
 					<button type="submit" class="submit btn btn-primary"><span class="oi oi-magnifying-glass"></span> Search</button>
