Made HTML and JS more generically named for reuse.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<div class="container-fluid bg">
     <div class="row mb-3 p-3">
 			<div id="btns-appear-here" class="col-8 p-3">
-				<button class="animal-btn m-1" data-animal="cat">cat</button>
-				<button class="animal-btn m-1" data-animal="dog">dog</button>
-				<button class="animal-btn m-1" data-animal="llama">llama</button>
+				<button class="gif-btn m-1" data-subject="cat">cat</button>
+				<button class="gif-btn m-1" data-subject="dog">dog</button>
+				<button class="gif-btn m-1" data-subject="llama">llama</button>
 			</div>
 			<div class="col-4">
 				<form class="float-right mb-3">
